Some changes to inspect_csv

--- a/date_location_tagging/inspect_csv.ipynb
+++ b/date_location_tagging/inspect_csv.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -29,23 +29,42 @@
        "news_id                   0\n",
        "news_title                0\n",
        "event                     0\n",
-       "location_prediction     674\n",
-       "village                2270\n",
-       "district               2270\n",
-       "state                  2270\n",
+       "location_prediction       0\n",
+       "village                1596\n",
+       "district               1596\n",
+       "state                  1596\n",
        "date_prediction           0\n",
        "event_type                0\n",
        "url                       0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(subset=['location_prediction'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save df to csv\n",
+    "df.to_csv('../outputs/allen_heidal_time_loc_and_date_filled_resolved_and_dropped.csv')"
    ]
   },
   {
