Fixed location preds

--- a/date_location_tagging/inspect_csv.ipynb
+++ b/date_location_tagging/inspect_csv.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>news_id</th>\n",
+       "      <th>news_title</th>\n",
+       "      <th>event</th>\n",
+       "      <th>location_prediction</th>\n",
+       "      <th>village</th>\n",
+       "      <th>district</th>\n",
+       "      <th>state</th>\n",
+       "      <th>date_prediction</th>\n",
+       "      <th>event_type</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>62f7ce2ed1eafd03bd6feb3a</td>\n",
+       "      <td>Ecotourism Is The Solution To Overtourism</td>\n",
+       "      <td>Overtourism is a grave challenge that is harmi...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>strike</td>\n",
+       "      <td>http://risingkashmir.com/news/ecotourism-is-th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>62f7ce2ed1eafd03bd6feb3a</td>\n",
+       "      <td>Ecotourism Is The Solution To Overtourism</td>\n",
+       "      <td>Overtourism has been covered in media and publ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>strike</td>\n",
+       "      <td>http://risingkashmir.com/news/ecotourism-is-th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>62f7ce2ed1eafd03bd6feb3a</td>\n",
+       "      <td>Ecotourism Is The Solution To Overtourism</td>\n",
+       "      <td>Overtourism is not only completely unsustainab...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>strike</td>\n",
+       "      <td>http://risingkashmir.com/news/ecotourism-is-th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>62f7ce2ed1eafd03bd6feb3a</td>\n",
+       "      <td>Ecotourism Is The Solution To Overtourism</td>\n",
+       "      <td>Policy responses to Overtourism are, in many c...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>strike</td>\n",
+       "      <td>http://risingkashmir.com/news/ecotourism-is-th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>62f7ce2ed1eafd03bd6feb3a</td>\n",
+       "      <td>Ecotourism Is The Solution To Overtourism</td>\n",
+       "      <td>Overtourism can negatively affect travelers’ s...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>strike</td>\n",
+       "      <td>http://risingkashmir.com/news/ecotourism-is-th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2265</th>\n",
+       "      <td>62f7ce2ed1eafd03bd6ff057</td>\n",
+       "      <td>Yeddy To Be CM For 4th Time,Cong Says He Doesn...</td>\n",
+       "      <td>\"BENGALURU —  Karnataka BJP President B S Yedd...</td>\n",
+       "      <td>BENGALURU</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>fight</td>\n",
+       "      <td>https://kashmirobserver.net/2019/regional-news...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2266</th>\n",
+       "      <td>62f7ce2ed1eafd03bd6ff057</td>\n",
+       "      <td>Yeddy To Be CM For 4th Time,Cong Says He Doesn...</td>\n",
+       "      <td>The state BJP leadership was awaiting \"instruc...</td>\n",
+       "      <td>BENGALURU</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>fight</td>\n",
+       "      <td>https://kashmirobserver.net/2019/regional-news...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2267</th>\n",
+       "      <td>62f7ce2ed1eafd03bd6ff057</td>\n",
+       "      <td>Yeddy To Be CM For 4th Time,Cong Says He Doesn...</td>\n",
+       "      <td>A group of Karnataka BJP leaders, including Ja...</td>\n",
+       "      <td>BENGALURU</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[('2019-07-25', 'Thursday'), ('2019-07-25', 'T...</td>\n",
+       "      <td>fight</td>\n",
+       "      <td>https://kashmirobserver.net/2019/regional-news...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2268</th>\n",
+       "      <td>62f7ce2ed1eafd03bd6ff057</td>\n",
+       "      <td>Yeddy To Be CM For 4th Time,Cong Says He Doesn...</td>\n",
+       "      <td>In BENGALURU —  Karnataka BJP President B S Ye...</td>\n",
+       "      <td>BENGALURU</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>fight</td>\n",
+       "      <td>https://kashmirobserver.net/2019/regional-news...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2269</th>\n",
+       "      <td>62f7ce2ed1eafd03bd6ff057</td>\n",
+       "      <td>Yeddy To Be CM For 4th Time,Cong Says He Doesn...</td>\n",
+       "      <td>\"I submit that BENGALURU —  Karnataka BJP Pres...</td>\n",
+       "      <td>BENGALURU</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>fight</td>\n",
+       "      <td>https://kashmirobserver.net/2019/regional-news...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2270 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       news_id  \\\n",
+       "0     62f7ce2ed1eafd03bd6feb3a   \n",
+       "1     62f7ce2ed1eafd03bd6feb3a   \n",
+       "2     62f7ce2ed1eafd03bd6feb3a   \n",
+       "3     62f7ce2ed1eafd03bd6feb3a   \n",
+       "4     62f7ce2ed1eafd03bd6feb3a   \n",
+       "...                        ...   \n",
+       "2265  62f7ce2ed1eafd03bd6ff057   \n",
+       "2266  62f7ce2ed1eafd03bd6ff057   \n",
+       "2267  62f7ce2ed1eafd03bd6ff057   \n",
+       "2268  62f7ce2ed1eafd03bd6ff057   \n",
+       "2269  62f7ce2ed1eafd03bd6ff057   \n",
+       "\n",
+       "                                             news_title  \\\n",
+       "0             Ecotourism Is The Solution To Overtourism   \n",
+       "1             Ecotourism Is The Solution To Overtourism   \n",
+       "2             Ecotourism Is The Solution To Overtourism   \n",
+       "3             Ecotourism Is The Solution To Overtourism   \n",
+       "4             Ecotourism Is The Solution To Overtourism   \n",
+       "...                                                 ...   \n",
+       "2265  Yeddy To Be CM For 4th Time,Cong Says He Doesn...   \n",
+       "2266  Yeddy To Be CM For 4th Time,Cong Says He Doesn...   \n",
+       "2267  Yeddy To Be CM For 4th Time,Cong Says He Doesn...   \n",
+       "2268  Yeddy To Be CM For 4th Time,Cong Says He Doesn...   \n",
+       "2269  Yeddy To Be CM For 4th Time,Cong Says He Doesn...   \n",
+       "\n",
+       "                                                  event location_prediction  \\\n",
+       "0     Overtourism is a grave challenge that is harmi...                 NaN   \n",
+       "1     Overtourism has been covered in media and publ...                 NaN   \n",
+       "2     Overtourism is not only completely unsustainab...                 NaN   \n",
+       "3     Policy responses to Overtourism are, in many c...                 NaN   \n",
+       "4     Overtourism can negatively affect travelers’ s...                 NaN   \n",
+       "...                                                 ...                 ...   \n",
+       "2265  \"BENGALURU —  Karnataka BJP President B S Yedd...           BENGALURU   \n",
+       "2266  The state BJP leadership was awaiting \"instruc...           BENGALURU   \n",
+       "2267  A group of Karnataka BJP leaders, including Ja...           BENGALURU   \n",
+       "2268  In BENGALURU —  Karnataka BJP President B S Ye...           BENGALURU   \n",
+       "2269  \"I submit that BENGALURU —  Karnataka BJP Pres...           BENGALURU   \n",
+       "\n",
+       "     village district state  \\\n",
+       "0        NaN      NaN   NaN   \n",
+       "1        NaN      NaN   NaN   \n",
+       "2        NaN      NaN   NaN   \n",
+       "3        NaN      NaN   NaN   \n",
+       "4        NaN      NaN   NaN   \n",
+       "...      ...      ...   ...   \n",
+       "2265     NaN      NaN   NaN   \n",
+       "2266     NaN      NaN   NaN   \n",
+       "2267     NaN      NaN   NaN   \n",
+       "2268     NaN      NaN   NaN   \n",
+       "2269     NaN      NaN   NaN   \n",
+       "\n",
+       "                                        date_prediction event_type  \\\n",
+       "0                                                    []     strike   \n",
+       "1                                                    []     strike   \n",
+       "2                                                    []     strike   \n",
+       "3                                                    []     strike   \n",
+       "4                                                    []     strike   \n",
+       "...                                                 ...        ...   \n",
+       "2265                                                 []      fight   \n",
+       "2266                                                 []      fight   \n",
+       "2267  [('2019-07-25', 'Thursday'), ('2019-07-25', 'T...      fight   \n",
+       "2268                                                 []      fight   \n",
+       "2269                                                 []      fight   \n",
+       "\n",
+       "                                                    url  \n",
+       "0     http://risingkashmir.com/news/ecotourism-is-th...  \n",
+       "1     http://risingkashmir.com/news/ecotourism-is-th...  \n",
+       "2     http://risingkashmir.com/news/ecotourism-is-th...  \n",
+       "3     http://risingkashmir.com/news/ecotourism-is-th...  \n",
+       "4     http://risingkashmir.com/news/ecotourism-is-th...  \n",
+       "...                                                 ...  \n",
+       "2265  https://kashmirobserver.net/2019/regional-news...  \n",
+       "2266  https://kashmirobserver.net/2019/regional-news...  \n",
+       "2267  https://kashmirobserver.net/2019/regional-news...  \n",
+       "2268  https://kashmirobserver.net/2019/regional-news...  \n",
+       "2269  https://kashmirobserver.net/2019/regional-news...  \n",
+       "\n",
+       "[2270 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -30,16 +308,16 @@
        "news_title                0\n",
        "event                     0\n",
        "location_prediction       0\n",
-       "village                1596\n",
-       "district               1596\n",
-       "state                  1596\n",
+       "village                1547\n",
+       "district               1547\n",
+       "state                  1547\n",
        "date_prediction           0\n",
        "event_type                0\n",
        "url                       0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
